--- a/controller/package.json
+++ b/controller/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.21",
+    "randomstring": "^1.3.1",
     "websocket": "^1.0.35"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
+    "@types/randomstring": "^1.3.0",
     "@types/websocket": "^1.0.10",
     "webpack-cli": "^5.1.4"
   },
